--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "clarity-ui": "^0.9.0",
     "core-js": "^2.4.1",
     "crypto-js": "^3.1.9-1",
+    "git": "^0.1.5",
+    "jsonwebtoken": "^7.4.2",
     "mutationobserver-shim": "^0.3.2",
     "rxjs": "^5.0.1",
     "ts-helpers": "^1.1.1",
